Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-08-31 (SVN):
    * engine/h2shared/quakefs.c, launcher/games.c: added details about
      the known hexen2 pak files. minor clean-ups.
    * engine/h2shared/h2config.h: undefine H2MP for demo-specific builds
    * updated version date stamp to 2012-08-31.

2012-08-29 (SVN):
    * engine/hexen2: move Makefile.sv under the server subdirectory and
      add missing osx flags. adjust the existing cross-compile scripts.
      add new cross-compile scripts under the server subdirectory.
    * engine/hexenworld/server: add missing osx flags to the Makefile.
      add new osx cross-compile script.
    * rpm spec file: adjust after moved Makefile.sv.

2012-08-29 (SVN):
    * Makefiles for jsh2color, light, vis: store the pthread flags in
      the PTHREAD_CFLAGS and PTHREAD_LIBS variables so that they can be
      overriden using the make command line.

2012-08-27 (SVN):
    * added new d_polysa.inc asm header where a new SPAN_SIZE macro is
      defined based on MAXHEIGHT and CACHE_SIZE macros. included the new
      header in d_polys*.asm and replaced the hard coded span sizes with
      the new macro. this is needed if we ever want to change MAXHEIGHT.
    * updated version date stamp to 2012-08-27.

2012-08-21 (SVN):
    * libs/xdelta3/xdelta3.h: fix uint64_t length modifier for macosx.

2012-08-18 (SVN):
    * draw.c: Disabled the stupid rotating skull animation during file
      i/o, unless DRAW_LOADINGSKULL is defined.
    * updated version date stamp to 2012-08-18.

2012-08-16 (SVN):
    * updated version date stamp to 2012-08-16.

2012-08-16 (SVN):
    * screen.c: Disabled the progress bars drawing during level load in
      software renderer, too: at least the macosx/sdl-1.2.14 combination
      is reported to have excessively long load times due to progress
      bars. Added a short version of SCR_DrawLoading() which uses the